--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
-    "boxicons": "^2.1.4",
     "chart.js": "^4.4.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
